--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
